routes/api-example-com-root-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com-root-route
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /trackapi/v1.0/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      # - type: ExtensionRef
      #   extensionRef:
      #     group: gateway.solo.io
      #     kind: RouteOption
      #     name: oidc-atv
      backendRefs:
      # Delegate to another HTTPRoute
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: tracks-apiproduct
        namespace: tracks
